k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment    #deployment name
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend            #lables to identify them
  template:
    metadata:
      name: backend-pod       #pod name
      namespace: chat-app
      labels: 
        app: backend
    spec:                     #creating container using image
      containers:
      - name: chatapp-backend   #name of image
        image: pranav1482/chatapp-backend:latest   #aapna keleli image tya docker file madhun ti push keleli hub la ti image
        ports:
        - containerPort: 5001    #he docker file madhe ahe toch expose kelay mhanun to
