k8s/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      name: mongodb-pod      #pos name
      namespace: chat-app
      labels: 
        app: mongodb
    spec:
      containers:
      - name: chatapp-mongodb   #image name
        image: mongo:latest
        ports:
        - containerPort: 27017  #hach asto hyacha
      volumes:       #aata je pv ani pvc banavaly te hya container la detoy
      - name: mongo-data      #volume name
        persistentVolumeClaim:
          claimName: mongodb-pvc   #he tya claim ch naav tech
